--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,11 @@
         android:id="@+id/btn_segunda_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
         android:layout_marginTop="32dp"
+        android:text="Segunda Activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_nome"
-        tools:text="Segunda Activity" />
+        app:layout_constraintTop_toBottomOf="@+id/text_nome" />
 
     <TextView
         android:id="@+id/text_nome"
